WIP fix for footer covering browser search result

--- a/amundsen_application/static/css/styles.scss
+++ b/amundsen_application/static/css/styles.scss
@@ -16,3 +16,9 @@ form {
   margin-bottom: 0;
 }
 
+
+.scrollable-content {
+  overflow: scroll;
+  height: calc(100% - 60px);
+
+}
