--- a/amundsen_application/static/js/components/Footer/styles.scss
+++ b/amundsen_application/static/js/components/Footer/styles.scss
@@ -15,9 +15,3 @@
   width: 100%;
 }
 
-.phantom-div {
-  display: block;
-  padding: 20px;
-  height: 48px;
-  width: 100%;
-}
